edit address and footer info

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -38,19 +38,8 @@
                             <span class="md">Find Us Here</span>
                             <div class="location-1">
                                 <i class="icon awe_map_marker"></i>
-                                <strong>Location 1: 500 CURRY RD</strong>
-                                SCHENECTADY NY 12306 (518)356-5373 
-                            </div>
-
-                            <div class="location-1">
-                                <i class="icon awe_map_marker"></i>
-                                <strong>Location 1: 500 CURRY RD</strong>
-                                SCHENECTADY NY 12306 (518)356-5373 
-                            </div>
-
-                            <div class="phone">
-                                <strong>Support Call</strong>
-                                (518)356-5373
+                                <strong>Location: Zürcherstrasse 91, 8952 Schlieren, Switzerland</strong>
+                                Telefon 043 495 00 22 - Fax 043 495 00 22 
                             </div>
                         </address>
                     </div>
@@ -91,8 +80,9 @@
                                 <h3 class="lg text-uppercase">CONTACT US</h3>
                                 <hr class="_hr">
                                 <address class="address-wrap">
-                                    <span class="address">Eddy Street & Gough Street, San Francisco, CA 94109</span>
-                                    <span class="phone">3792 - 7384 - 8459</span>
+                                    <span class="address">PHỞ SÀI GÒN 52</span>
+                                    <span class="address">Zürcherstrasse 91, 8952 Schlieren, Switzerland</span>
+                                    <span class="phone">043 495 00 22</span>
                                 </address>
                             </div>
 
@@ -104,7 +94,7 @@
                 </div>
             </div>
             <!-- MAP -->
-            <div id="map" data-map-zoom="14" data-map-latlng="45.738028, 21.224535" data-snazzy-map-theme="grayscale" data-map-marker="images/marker.png" data-map-marker-size="200*60"></div>
+            <div id="map" data-map-zoom="19" data-map-latlng="47.398197, 8.459163" data-snazzy-map-theme="grayscale" data-map-marker="images/map-here.png" data-map-marker-size="35*60"></div>
             <!-- END / MAP -->
         </div>
 
