--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -32,7 +32,7 @@
         <%= javascript_include_tag 'http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js' %>
     <![endif]-->
     
-    <title>Lotus - Vietnames Cuisine</title>
+    <title>Phở Sài Gòn 52</title>
 </head>
 
 <!-- BODY -->
