--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="copyright text-center">
             Copyright &copy; 2016 Phở Sài Gòn 52 - All Right Reserved.<br/>
-            Design by <%= link_to "Hoang Khang Incotech", "http://hoangkhang.com.vn/", target: "_blank" %>
+            Design by <%= link_to "IdentSwiss.com", "http://www.identswiss.com/", target: "_blank" %>
         </div>
     </div>
 </footer>
