coding backend 80% and coding menu of frontend 40% - not data

--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,25 +1,68 @@
-<%= form_for(@category) do |f| %>
-  <% if @category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
+<% if @category.errors.any? %>
+  <div id="error_explanation">
+    <h6><%= pluralize(@category.errors.count, "error") %> prohibited this tag from being saved:</h6>
 
-      <ul>
-      <% @category.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <% @category.errors.full_messages.each do |message| %>
+      <p class="label label-warning"><%= message %></p>
+    <% end %>
+  </div>
+<% end %>
+
+<%= form_for [:admin, @category], html: {class: "form-horizontal"} do |f| %>
+
+    <div class="panel-body">
+        
+        <div class="form-group field">
+            <%= f.label "Name", class: "col-lg-3 control-label" %>
+            <div class="col-lg-9">
+              <%= f.text_field :name, placeholder: "Enter name of category (required).....", class: "form-control" %>
+            </div>
+        </div>
+
+        <div class="form-group field">
+            <%= f.label "Description", class: "col-lg-3 control-label" %>
+            <div class="col-lg-9">
+              <%= f.text_area :description, rows: "5", cols: "5", placeholder: "Enter description of category.....", class: "form-control" %>
+            </div>
+        </div>
+            
+        <div class="form-group field">
+            <%= f.label "Parent Categories", class: "col-lg-3 control-label" %>
+            <div class="col-lg-9">
+              <% Category.all.each do |category| %>
+                  <% if @category.id != category.id %>
+                      <% if category.level == 1 %>
+                          <div class="checkbox">
+                              <label>
+                                  <%= check_box_tag 'category[parent_ids][]', category.id, @category.parent.include?(category), :id => "category_#{category.id}", class: "styled" %>
+                                  <%= f.label category.name, :for => "category_#{category.id}" %>
+                              </label>
+                          </div>
+                        <% category.children.each do |child_1| %>
+                            <div class="checkbox">
+                                <label>
+                                    <%= check_box_tag 'category[parent_ids][]', child_1.id, @category.parent.include?(child_1), :id => "category_#{category.id}", class: "styled" %>
+                                    <%= f.label child_1.name, :for => "category_#{category.id}" %>
+                                </label>
+                            </div>
+                            <% child_1.children.each do |child_2| %>
+                                <div class="checkbox">
+                                    <label>
+                                        <%= check_box_tag 'category[parent_ids][]', child_2.id, @category.parent.include?(child_2), :id => "category_#{category.id}", class: "styled" %>
+                                        <%= f.label child_2.name, :for => "category_#{category.id}" %>
+                                    </label>
+                                </div>
+                            <% end %>
+                        <% end %>
+                      <% end %>
+                  <% end %>
+              <% end %>
+            </div>
+        </div>
+
+        <div class="text-right">
+          <%= button_tag 'Save <i class="icon-plus22 position-right"></i>'.html_safe, class: "btn btn-primary"%>
+          <%= link_to 'Cancel <i class="icon-cross2"></i>'.html_safe, admin_categories_path,class: "btn bg-warning-400"%>
+        </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
