--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -3,7 +3,7 @@
 <li>
     <a href="#"><i class="icon-copy"></i> <span>Restaurant Menu</span></a>
     <ul>
-        <li><a href="#">Menus Management <span class="label bg-warning-400">Important</span></a></li>
+        <li><%= link_to "Menus Management <span class='label bg-warning-400'>Important</span>".html_safe, admin_menus_path %></li>
         <li><%= link_to "Categories Management", admin_categories_path %></li>
     </ul>
 </li>
