--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -71,7 +71,7 @@
                             <div class="form-group">
                                 <%= label "", "Picture: ", class: "control-label col-sm-2 text-semibold" %>
                                 <div class="col-sm-10">
-                                    <%= image_tag(@post.image_url, size: "250x150", alt: "Picture of Post", class: "img-rouded") %>
+                                    <%= image_tag(@post.image_url.image_medium, alt: "Picture of Post", class: "img-rouded") %>
                                 </div>
                             </div>
                             <div class="form-group">
