--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -71,7 +71,7 @@
                             <div class="form-group">
                                 <%= label "", "Logo/Picture: ", class: "control-label col-sm-2 text-semibold" %>
                                 <div class="col-sm-10">
-                                    <%= image_tag(@restaurant.image_url, size: "250x150", alt: "Hình ảnh của slide", class: "img-rouded") %>
+                                    <%= image_tag(@restaurant.image_url.image_medium, alt: "Hình ảnh của slide", class: "img-rouded") %>
                                 </div>
                             </div>
                             <div class="form-group">
