update logo file

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,7 @@
 <header id="header" class="header header-2">
     <div class="container">
         <!-- LOGO -->
-        <div class="logo"><a href="<%= root_path %>"><img src="images/logo-main.jpg" alt=""></a></div>
+        <div class="logo"><a href="<%= root_path %>"><img src="images/logo-PhoSG52.png" alt=""></a></div>
         <!-- END / LOGO -->
 
         <!-- OPEN MENU MOBILE -->
@@ -20,7 +20,6 @@
                 <li><%= link_to "Reservation", {controller: "reservation", action: "index"} %></li>
                 <li><%= link_to "Events", {controller: "blog", action: "index"} %></li>
                 <li><%= link_to "Contact", {controller: "contact", action: "index"} %></li>
-                <li><%= link_to "Demo Logo", {controller: "demo_logo", action: "index"} %></li>
             </ul>
             <!-- END / NAV -->
 
