--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="image-wrap">
-                            <img src="images/logo-main.jpg" alt="">
+                            <img src="images/logo-PhoSG52.png" alt="">
                         </div>
                     </div>
 
