--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -18,7 +18,7 @@
 	
 	<!-- JS and meta for Rails -->
 
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application' %>
 	<%= csrf_meta_tags %>
 
 	<!-- /js and meta for rails -->
