--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -20,9 +20,9 @@
     </div>
     
     <div class="form-group">
-        <%= f.label "Tiêu đề: ", class: "col-lg-2 control-label" %>
+        <%= f.label "Title: ", class: "col-lg-2 control-label" %>
         <div class="col-lg-10">
-            <%= f.text_field :title, placeholder: "Enter title of post (required)", class: "form-control" %>
+            <%= f.text_field :title, placeholder: "Enter title of post (required)...", class: "form-control" %>
         </div>
     </div>
         
