bo panel menu, about + update address position, email, website

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -17,28 +17,19 @@
         <%= render "home/header" %>
     <!-- END / HEADER -->
 
-    <!-- SUB BANNER -->
-    <section class="sub-banner text-center section">
-        <div class="awe-parallax bg-5"></div>
-        <div class="awe-title awe-title-3">
-            <h3 class="lg text-uppercase">About</h3>
-        </div>
-    </section>
-    <!-- END / SUB BANNER -->
-
     <!-- ABOUT STORY -->
     <section id="about-story" class="about-story section">
         <div class="divider divider-2"></div>
         <div class="container">
             <div class="block-first">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="image-wrap">
-                            <img src="images/logo-PhoSG52.png" alt="">
+                            <img src="/frontend/images/about/pho-01.jpg" alt="">
                         </div>
                     </div>
 
-                    <div class="col-md-7 col-md-offset-1">
+                    <div class="col-md-6 col-md-offset-1">
                         <h4 class="lg text-uppercase">HEALTHY FOOD IS FUTURE</h4>
                         <p>Venison spare ribs pork tail, beef meatloaf kielbasa turkey rump turducken beef ribs ground round sirloin kevin hamburger. Boudin ham hock chicken,. Leberkas ham sausage doner pastrami porchetta tri-tip boudin shankle. Meatball shoulder rump spare ribs tongue venison short ribs. Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
                     </div>
