--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -39,7 +39,11 @@
                             <div class="location-1">
                                 <i class="icon awe_map_marker"></i>
                                 <strong>Location: Zürcherstrasse 91, 8952 Schlieren, Switzerland</strong>
-                                Telefon 043 495 00 22 - Fax 043 495 00 22 
+                                Telefon: 043 495 00 22 - Fax: 043 495 00 22
+                            </div>
+                            <div class="location-1">
+                                <i class="icon awe_map_marker"></i>
+                                <strong>See location: <%= link_to "here", "https://www.google.com/maps/place/Z%C3%BCrcherstrasse+91,+8952+Schlieren,+Thu%E1%BB%B5+S%C4%A9/@47.3981939,8.4569929,17z/data=!3m1!4b1!4m2!3m1!1s0x47900b8eb1097ab9:0x190058072b37d7a4", target: "_blank" %>
                             </div>
                         </address>
                     </div>
@@ -80,9 +84,11 @@
                                 <h3 class="lg text-uppercase">CONTACT US</h3>
                                 <hr class="_hr">
                                 <address class="address-wrap">
-                                    <span class="address">PHỞ SÀI GÒN 52</span>
+                                    <span class="phone">PHỞ SÀI GÒN 52</span>
                                     <span class="address">Zürcherstrasse 91, 8952 Schlieren, Switzerland</span>
-                                    <span class="phone">043 495 00 22</span>
+                                    <span class="address">Telefon: 043 495 00 22 - Fax: 043 495 00 22</span>
+                                    <span class="address">Email: phosaigon52@gmail.com</span>
+                                    <span class="address">Website: phosaigon52.ch</span>
                                 </address>
                             </div>
 
